<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TurnkeyUiMainActivity!</string>
    <string name="app_name">TK_UI_Integration</string>
    <!-- For PVR/tshift -->
    <string name="schedulelist_nofiles">There is no record schedule! Please press ADD key to add one</string>
    <string name="schedulelist_nofiles_disable_add">There is no record schedule!</string>
    <string name="exit">Exit</string>
    <string name="selected">Selected</string>
    <string name="add_schedule">Add schedule</string>
    <string name="pvr_schedule_replace">Replace</string>
    <string name="pvr_schedule_add">Add</string>
    <string name="pvr_schedule_cancel">Cancel</string>
    <string name="pvr_schedule_edit">Edit</string>
    <string name="pvr_schedule_delete">Delete</string>
    <string name="pvr_title_device_info">Device Info</string>
    <string name="pvr_deviceinfo_info">Info</string>
    <string name="pvr_exit">Exit</string>
    <string name="pvr_deviceinfo_set_timeshift">Set TimeShift</string>
    <string name="pvr_deviceinfo_set_pvr">Set PVR</string>
    <string name="pvr_deviceinfo_format">Format</string>
    <string name="pvr_deviceinfo_speed_test">Speed Test</string>
    <string name="pvr_disk_no_name">No Name</string>
    <string name="pvr_disk_size_temp_3_8_3_8gb">3.8/3.8GB</string>
    <string name="pvr_disk_ispvr_pvr_tshift">PVR/TSHIFT</string>
    <string name="pvr_disk_na">NA</string>
    <string name="pvr_nf_info">00:00:00</string>
     <string name="pvr_play_info">/</string>
    <string name="pvr_playlist_record_list">Record List</string>
    <string name="pvr_playlist_page_up">Page Up</string>
    <string name="pvr_playlist_delete">Delete</string>
    <string name="pvr_playlist_page_down">Page Down</string>
    <string name="pvr_playlist_info">Info</string>
    <string name="pvr_playlist_record_detail">Record Detail</string>
    <string name="pvr_playlist_channel_num">Channel Num</string>
    <string name="pvr_playlist_ch_40">CH 40</string>
    <string name="pvr_playlist_channel_name">Channel Name</string>
    <string name="pvr_playlist_cctv_1">CCTV-1</string>
    <string name="pvr_playlist_program_name">Program Name</string>
    <string name="pvr_playlist_special_6_1">Special 6+1</string>
    <string name="pvr_playlist_date">Date</string>
    <string name="pvr_playlist__2012_11_30">2012/11/30</string>
    <string name="pvr_playlist_week">Week</string>
    <string name="pvr_playlist_fri">Fri</string>
    <string name="pvr_playlist_time">Time</string>
    <string name="pvr_playlist_01_39_16">01:39:16</string>
    <string name="pvr_playlist_duration">Duration</string>
    <string name="pvr_playlist_00_00_03">00:00:03</string>
    <string name="pvr_pvr_working_rec_time">[00:00:03/00:00]</string>
    <string name="pvr_tshift_working_rec_time">[00:00:03/00:00]</string>
    <string name="pvr_tshift_working_cur_time">13:02:28</string>
    <string name="pvr_tshift_offset_time">-00:00:00</string>
    <string name="pvr_tshift_0">0</string>
    <string name="pvr_tshift_13_00">13:00</string>
    <string name="pvr_tshift_13_30">13:30</string>
    <string name="pvr_disksetup_disk_setup">Disk Setup</string>
    <string name="pvr_disksetup_page_up">Page Up</string>
    <string name="pvr_disksetup_select">Select</string>
    <string name="pvr_disksetup_page_down">Page Down</string>
    <string name="pvr_disksetup_exit">Exit</string>
    <string name="pvr_schedulepvr_ch41">CH41</string>
    <string name="pvr_schedulepvr_date">2013/01/04 13:22 Tue</string>
    <string name="pvr_schedulepvr_time">00hr 00min</string>
    <string name="pvr_schedulepvr_week">Week</string>
    <string name="pvr_schedulepvr_record">Record</string>
    <string name="pvr_schedulepvr_schedule_list">Schedule List</string>
    <string name="pvr_schedulepvr_diskinfo">No name: 3.8/3.8 GB</string>
    <string name="pvr_schedulepvr_add_schedule">Add schedule</string>
    <string name="pvr_schedulepvr_selected">Selected</string>
    <string name="pvr_schedulepvr_exit">Exit</string>
    <string name="pvr_schedulepvr_schedule_list2">Schedule List</string>
    <string name="pvr_schedulepvr_disk_info">No name: 3.8/3.8 GB</string>
    <string name="pvr_confirm_yes">Yes</string>
    <string name="pvr_confirm_no">No</string>
    <string name="pvr_dialog_exit">Exit</string>
    <string name="pvr_schedulelist_wednesday">Wednesday</string>
    <string name="pvr_schedulelist_replace_line1">Schedule overlapped!</string>
    <string name="pvr_schedulelist_replace_line2">Do you want to replace these schedules</string>
    <string name="pvr_schedulelist_delete_line1">Schedule delete!</string>
    <string name="pvr_schedulelist_delete_line2">Do you want to delete these schedules</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_schedule_pvr">SchedulePvrActivity</string>
</resources>
