<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/device_info_hint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="50sp"
    android:padding="10dip"
    android:stretchColumns="0,1,2,3,4"
    android:textColor="@color/white"
    android:textSize="@dimen/nav_pvr_textsize" >

    <TableRow>

        <!-- android:textAppearance="@style/nav_pvr_filelist_text" -->

        <TextView
            android:id="@+id/schedule_channel_name"
            android:layout_gravity="left|center_vertical"
            android:src="@drawable/tk_cm_color_key_green"
            android:text="@string/pvr_schedulepvr_ch41"
            android:textColor="@color/yellow" />

        <TextView
            android:id="@+id/schedule_date"
            android:layout_gravity="center_vertical"
            android:text="@string/pvr_schedulepvr_date"
            android:textColor="@color/yellow" />

        <TextView
            android:id="@+id/schedule_duration"
            android:layout_gravity="left|center_vertical"
            android:src="@drawable/tk_cm_color_key_blue"
            android:text="@string/pvr_schedulepvr_time"
            android:textColor="@color/yellow" />

        <TextView
            android:id="@+id/schedule_internel"
            android:layout_gravity="left|center_vertical"
            android:text="@string/pvr_schedulepvr_week"
            android:textColor="@color/yellow"
            
             />

        <TextView
            android:id="@+id/schedule_notification"
            android:layout_gravity="right|center_vertical"
            android:text="@string/pvr_schedulepvr_record"
            android:textColor="@color/yellow" 
            android:minWidth="70dp"
            />
    </TableRow>

</TableLayout>