<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pvr_timeshift_deviceinfo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/tv_background"
    >
     
    <RelativeLayout
        android:id="@+id/device_info_list_root"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:background="@drawable/nav_capture_logo_bg"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
         >

        <TextView
            android:id="@+id/device_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="25dip"
            android:text="@string/pvr_title_device_info"
            android:textColor="@color/white"
            />

        <TableLayout
            android:id="@+id/device_info_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:padding="15dip"
            android:stretchColumns="2"
            android:textColor="@color/white"
            android:textSize="20sp" >

            <TableRow>

                <ImageView
                    android:layout_column="1"
                    android:padding="10dip"
                    android:src="@drawable/tk_cm_key_enter" 
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:layout_column="1"
                    android:padding="3dip"
                    android:text="@string/pvr_deviceinfo_info"
                    android:textAppearance="@style/nav_pvr_filelist_text"/>
                <ImageView
                    android:layout_column="1"
                    android:gravity="right"
                    android:padding="10dip"
                    android:src="@drawable/tk_cm_key_exit" 
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:layout_column="1"
                    android:padding="3dip"
                    android:text="@string/pvr_exit"
                    android:textAppearance="@style/nav_pvr_filelist_text" />
            </TableRow>
        </TableLayout>

        <ListView
            android:id="@+id/device_info_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@+id/device_info_hint"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/device_info_title"
            android:dividerHeight="0dip"
            android:gravity="center_horizontal"
            android:padding="10dip"
            android:textColor="@color/white"
            android:textSize="20sp" 
            android:listSelector="@drawable/mmp_listselected"
            >
        </ListView>
    </RelativeLayout>

    
    
    <LinearLayout
        android:id="@+id/device_info_sub_menu"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_toRightOf="@+id/device_info_list_root"
        android:layout_marginTop="75dp"
        android:background="@drawable/tk_cm_main_bg"
         >
        	<Button
                android:id="@+id/disksetting_setshift"
                style="@style/pvr_tshift_schedulelist_btns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pvr_deviceinfo_set_timeshift" />
			<Button
                android:id="@+id/disksetting_setpvr"
                style="@style/pvr_tshift_schedulelist_btns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pvr_deviceinfo_set_pvr" />
        <Button
                android:id="@+id/disksetting_format"
                style="@style/pvr_tshift_schedulelist_btns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pvr_deviceinfo_format" />
        <Button
                android:id="@+id/disksetting_speedtest"
                style="@style/pvr_tshift_schedulelist_btns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pvr_deviceinfo_speed_test" />
    </LinearLayout>
   

</RelativeLayout>