<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="550dp"
        android:layout_height="match_parent"
        android:background="@drawable/nav_capture_logo_bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/playlist_title"
            style="@style/pvr_tshift_textsize_23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="25dip"
            android:layout_marginLeft="5dp"
            android:text="@string/pvr_playlist_record_list"
            android:textColor="@color/white"
            android:focusable="false"
        	android:focusableInTouchMode="false"
             />

        <TableLayout
            android:id="@+id/playlist_hint"
            style="@style/pvr_tshift_textsize_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:padding="15dip"
            android:stretchColumns="2"
            android:textColor="@color/white" 
            android:focusable="false"
        	android:focusableInTouchMode="false"
            >

            <TableRow>

                <ImageView
                    android:layout_column="1"
                    android:padding="10dip"
                    android:src="@drawable/tk_cm_color_key_red" />

                <TextView
                    android:layout_column="1"
                    android:padding="3dip"
                    android:text="@string/pvr_playlist_page_up"
                    android:textAppearance="@style/nav_pvr_filelist_text" />

                <ImageView
                    android:layout_column="1"
                    android:gravity="right"
                    android:padding="10dip"
                    android:src="@drawable/tk_cm_color_key_yellow" />

                <TextView
                    android:layout_column="1"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="@string/pvr_playlist_delete"
                    android:textAppearance="@style/nav_pvr_filelist_text" />
            </TableRow>

            <TableRow>

                <ImageView
                    android:layout_column="1"
                    android:padding="10dip"
                    android:src="@drawable/tk_cm_color_key_green" />

                <TextView
                    android:layout_column="1"
                    android:padding="3dip"
                    android:text="@string/pvr_playlist_page_down"
                    android:textAppearance="@style/nav_pvr_filelist_text" />
<!-- 
                <ImageView
                    android:layout_column="1"
                    android:gravity="right"
                    android:padding="10dip"
                    android:src="@drawable/tk_cm_color_key_blue" />

                <TextView
                    android:layout_column="1"
                    android:padding="3dip"
                    android:text="@string/pvr_playlist_info"
                    android:textAppearance="@style/nav_pvr_filelist_text" />
 -->      
            </TableRow>
        </TableLayout>

        <ListView
            android:id="@+id/playlist_list"
            style="@style/pvr_tshift_textsize_20"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@+id/playlist_hint"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/playlist_title"
            android:dividerHeight="0dip"
            android:gravity="center_horizontal"
            android:padding="10dip"
            android:textColor="@color/white" 
            android:listSelector="@drawable/mmp_listselected"
            android:nextFocusUp="@+id/playlist_list"
            android:nextFocusDown="@+id/playlist_list"
            >
        </ListView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pvr_file_info"
        android:layout_width="500dp"
        android:layout_height="match_parent"
        android:background="@drawable/nav_capture_logo_bg"
        android:orientation="vertical" 
        android:visibility="invisible" 
        android:focusable="false"
        android:focusableInTouchMode="false"
        >

        <TextView
            android:id="@+id/playlist_filename"
            style="@style/pvr_tshift_textsize_23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="25dip"
            android:text="@string/pvr_playlist_record_detail"
            android:textColor="@color/white" />

        <TableLayout
            android:id="@+id/playlist_filemeta"
            style="@style/pvr_tshift_textsize_20"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_below="@+id/playlist_filename"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dip"
            android:textColor="@color/white" >

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:text="@string/pvr_playlist_channel_num"
                    android:textAppearance="@style/nav_pvr_filelist_text" />

                <TextView
                    android:id="@+id/pvr_channel_num"
                    android:layout_column="1"
                    android:layout_marginLeft="55sp"
                    android:gravity="left"
                    android:textAppearance="@style/nav_pvr_filelist_text" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:text="@string/pvr_playlist_channel_name"
                    android:textAppearance="@style/nav_pvr_filelist_text" />

                <TextView
                    android:id="@+id/pvr_channel_str"
                    android:layout_column="1"
                    android:layout_marginLeft="55sp"
                    android:gravity="left"
                    android:textAppearance="@style/nav_pvr_filelist_text" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:text="@string/pvr_playlist_program_name"
                    android:textAppearance="@style/nav_pvr_filelist_text" />

                <TextView
                    android:id="@+id/pvr_programename"
                    android:layout_column="1"
                    android:layout_marginLeft="55sp"
                    android:gravity="left"
                    android:singleLine="true"
                    android:maxEms="9"
                    android:ellipsize="end"
                    android:textAppearance="@style/nav_pvr_filelist_text" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:text="@string/pvr_playlist_date"
                    android:textAppearance="@style/nav_pvr_filelist_text" />

                <TextView
                    android:id="@+id/pvr_channel_date"
                    android:layout_column="1"
                    android:layout_marginLeft="55sp"
                    android:gravity="left"
                    android:textAppearance="@style/nav_pvr_filelist_text" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:text="@string/pvr_playlist_week"
                    android:textAppearance="@style/nav_pvr_filelist_text" />

                <TextView
                    android:id="@+id/pvr_week"
                    android:layout_column="1"
                    android:layout_marginLeft="55sp"
                    android:gravity="left"
                    android:textAppearance="@style/nav_pvr_filelist_text" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:text="@string/pvr_playlist_time"
                    android:textAppearance="@style/nav_pvr_filelist_text" />

                <TextView
                    android:id="@+id/pvr_time"
                    android:layout_column="1"
                    android:layout_marginLeft="55sp"
                    android:gravity="left"
                    android:textAppearance="@style/nav_pvr_filelist_text" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/pvr_tshift_textsize_20"
                    android:layout_column="1"
                    android:text="@string/pvr_playlist_duration"
                    android:textAppearance="@style/nav_pvr_filelist_text" />

                <TextView
                    android:id="@+id/pvr_duration"
                    android:layout_column="1"
                    android:layout_marginLeft="55sp"
                    android:gravity="left"
                    android:textAppearance="@style/nav_pvr_filelist_text" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>

</LinearLayout>